package json and files updated to use ES

--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "montecarlo-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "author": "Julian Rojas",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
