--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "Julian Rojas",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
