--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
